...
            <connections>
                <outlet property="codingImage" destination="rSC-WT-mJe" id="W8a-Gi-zw6"/>
                <outlet property="codingLabel" destination="mOr-Jh-pcu" id="NRQ-gS-lBy"/>
                <outlet property="readingImage" destination="5Dh-nR-5Lb" id="MBn-0i-lxd"/>
                <outlet property="readingLabel" destination="sOn-u5-rlH" id="L4H-32-81F"/>
                <outlet property="saveButton" destination="lKE-6E-cHn" id="nH7-T4-VxN"/>
                <outlet property="timePicker" destination="ZUP-5V-aMB" id="MOy-zH-t7D"/>
                <outlet property="trainingLabel" destination="KCl-jI-gQI" id="aUX-1u-aCq"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                <outlet property="workImage" destination="dw7-2C-Soi" id="f66-nl-U9N"/>
                <outlet property="workTitleText" destination="qpC-7a-faz" id="o0y-zw-iia"/>
                <outlet property="workingLabel" destination="Rzx-yy-eEg" id="u4S-N9-tpW"/>
                <outlet property="workoutImage" destination="VQA-3O-GS8" id="AxC-l5-IOP"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
...
                </textField>
                <datePicker contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="countDownTimer" countDownDuration="300" minuteInterval="1" style="wheels" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZUP-5V-aMB">
                    <rect key="frame" x="8" y="75" width="377" height="216"/>
                </datePicker>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lKE-6E-cHn">
                    <rect key="frame" x="166" y="659" width="61" height="34.333333333333371"/>
                    <accessibility key="accessibilityConfiguration" identifier="SaveButton"/>
                    <color key="tintColor" red="0.88235294117647056" green="0.31764705882352939" blue="0.40392156862745099" alpha="1" colorSpace="calibratedRGB"/>
                    <state key="normal" title="Button"/>
                    <buttonConfiguration key="configuration" style="filled" title="Save"/>
                    <connections>
                        <action selector="saveButtonClicked:" destination="-1" eventType="touchUpInside" id="ll5-bc-gDB"/>
                    </connections>
...
